--- a/po/hu.po
+++ b/po/hu.po
@@ -1,15 +1,17 @@
-# Hungarian translation of Leafpad
+# Hungarian translation of Mousepad
 # Copyright (C) 2004 Free Software Foundation, Inc.
-# This file is distributed under the same license as the Leafpad package.
-# Reviczky Ádám János <reviczky@freemail.hu>, 2004.
+# This file is distributed under the same license as the Mousepad package.
+# SZERVÁC Attila <sas@321.hu>, 2005.
+#   based on Leafpad translation by
+#   Reviczky Ádám János <reviczky@freemail.hu>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Leafpad 0.7.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-11-20 12:00+0100\n"
-"Last-Translator: Reviczky Ádám János <reviczky@freemail.hu>\n"
+"PO-Revision-Date: 2005-05-19 13:25+0100\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,12 +20,13 @@ msgstr ""
 #: src/callback.c:34
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "'%s' változások mentése?"
+msgstr "Mented az alábbi változásait?: '%s'"
 
-#: src/callback.c:180 src/file.c:150
+#: src/callback.c:180
+#: src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "A kódtáblát nem lehet erre '%s' konvertálni"
+msgstr "A kódkészlet nem váltható erre: '%s'"
 
 #: src/callback.c:207
 #, fuzzy
@@ -32,12 +35,12 @@ msgstr "Nem lehet írásra megnyitni a fájlt"
 
 #: src/callback.c:366
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "Egyszerű Xfce szövegszerkesztő"
 
 #: src/dialog.c:135
 #, c-format
 msgid "About %s"
-msgstr "%s névjegye"
+msgstr "%s névjegy"
 
 #: src/file.c:163
 msgid "Can't open file to write"
@@ -49,7 +52,7 @@ msgstr "Nem lehet írni a fájlt"
 
 #: src/font.c:49
 msgid "Font"
-msgstr "Betütípus"
+msgstr "Betű"
 
 #: src/menu.c:60
 msgid "/_File"
@@ -60,7 +63,6 @@ msgid "/File/_New"
 msgstr "/Fájl/_Új"
 
 #. { N_("/File/New _Window"), "<shift><control>N",
-#. G_CALLBACK(cb_file_new), 1 },
 #: src/menu.c:66
 msgid "/File/_Open..."
 msgstr "/Fájl/Meg_nyit"
@@ -71,12 +73,11 @@ msgstr "/Fájl/_Ment"
 
 #: src/menu.c:70
 msgid "/File/Save _As..."
-msgstr "/Fájl/Ment má_skent..."
+msgstr "/Fájl/Ment má_sként..."
 
 #: src/menu.c:72
-#, fuzzy
 msgid "/File/_Print..."
-msgstr "/Fájl/Meg_nyit"
+msgstr "/Fájl/N_yomtat..."
 
 #: src/menu.c:76
 msgid "/File/_Quit"
@@ -92,15 +93,15 @@ msgstr "/Szerkesztés/_Visszavon"
 
 #: src/menu.c:82
 msgid "/Edit/_Redo"
-msgstr "/Szerkesztés/Ú_jra"
+msgstr "/Szerkesztés/Új_ra"
 
 #: src/menu.c:86
 msgid "/Edit/Cu_t"
-msgstr "/Szerkesztés/K_ivág"
+msgstr "/Szerkesztés/_Kivág"
 
 #: src/menu.c:88
 msgid "/Edit/_Copy"
-msgstr "/Szerkesztés/M_ásol"
+msgstr "/Szerkesztés/_Másol"
 
 #: src/menu.c:90
 msgid "/Edit/_Paste"
@@ -108,31 +109,31 @@ msgstr "/Szerkesztés/_Beilleszt"
 
 #: src/menu.c:92
 msgid "/Edit/_Delete"
-msgstr "/Szerkesztés/Tö_röl"
+msgstr "/Szerkesztés/_Töröl"
 
 #: src/menu.c:96
 msgid "/Edit/Select _All"
-msgstr "/Szerkesztés/Mindent Kije_löl"
+msgstr "/Szerkesztés/Min_dent kijelöl"
 
 #: src/menu.c:98
 msgid "/_Search"
-msgstr "/Keres_és"
+msgstr "/_Keresés"
 
 #: src/menu.c:100
 msgid "/Search/_Find..."
-msgstr "/Keresés/_Keres..."
+msgstr "/Keresés/_Találd meg..."
 
 #: src/menu.c:102
 msgid "/Search/Find _Next"
-msgstr "/Keresés/K_övetkező Keresése"
+msgstr "/Keresés/_Következő keresése"
 
 #: src/menu.c:104
 msgid "/Search/Find _Previous"
-msgstr "/Keresés/Elő_ző Keresése"
+msgstr "/Keresés/_Előző keresése"
 
 #: src/menu.c:106
 msgid "/Search/_Replace..."
-msgstr "/Keresés/Ki_cserél..."
+msgstr "/Keresés/_Csere..."
 
 #: src/menu.c:110
 msgid "/Search/_Jump To..."
@@ -140,23 +141,23 @@ msgstr "/Keresés/_Ugrás..."
 
 #: src/menu.c:112
 msgid "/_Options"
-msgstr "_Beállítások"
+msgstr "/_Beállítások"
 
 #: src/menu.c:114
 msgid "/Options/_Font..."
-msgstr "/Beállítások/Betütí_pus..."
+msgstr "/Beállítások/_Betű..."
 
 #: src/menu.c:116
 msgid "/Options/_Word Wrap"
-msgstr "/Beállítások/_Sortörés"
+msgstr "/Beállítások/Tördelés"
 
 #: src/menu.c:118
 msgid "/Options/_Line Numbers"
-msgstr "/Beállítások/Sorszá_mok"
+msgstr "/Beállítások/_Sorszámok"
 
 #: src/menu.c:122
 msgid "/Options/_Auto Indent"
-msgstr "/Beállítások/Automatikus Be_húzás"
+msgstr "/Beállítások/_Automatikus behúzás"
 
 #: src/menu.c:124
 msgid "/_Help"
@@ -168,36 +169,38 @@ msgstr "/Súgó/_Névjegy"
 
 #: src/search.c:73
 msgid "Search string not found"
-msgstr "Szövegrészlet nem fodul elő"
+msgstr "A keresett szöveg nem található"
 
 #: src/search.c:115
 msgid "Replace?"
-msgstr "Kicserél?"
+msgstr "Cseréljük?"
 
 #: src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "%d szövegrészlet kicserélve"
+msgstr "%d szövegrészletet cseréltünk"
 
 #: src/search.c:188
 msgid "Find"
 msgstr "Keres"
 
-#: src/search.c:200 src/search.c:265
+#: src/search.c:200
+#: src/search.c:265
 msgid "Fi_nd what: "
 msgstr "_Amit keres: "
 
-#: src/search.c:219 src/search.c:292
+#: src/search.c:219
+#: src/search.c:292
 msgid "_Match case"
 msgstr "_Kis/nagybetű számít"
 
 #: src/search.c:253
 msgid "Replace"
-msgstr "Kicserél"
+msgstr "Csere"
 
 #: src/search.c:280
 msgid "Re_place with: "
-msgstr "Ki_cserél erre: "
+msgstr "_Csere erre: "
 
 #: src/search.c:296
 msgid "Replace _all at once"
@@ -218,15 +221,15 @@ msgstr "S_orszám: "
 #: src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Jelenlegi Locale (%s)"
+msgstr "Jelenlegi locale (%s)"
 
 #: src/selector.c:147
 msgid "Other Codeset"
-msgstr "Más Kódtábla"
+msgstr "Más kódkészlet"
 
 #: src/selector.c:186
 msgid "Code_set:"
-msgstr "Kód_tábla:"
+msgstr "Kódké_szlet:"
 
 #: src/selector.c:207
 #, c-format
@@ -239,7 +242,7 @@ msgstr "Automatikus Felismerés"
 
 #: src/selector.c:325
 msgid "Open"
-msgstr "Megnyit"
+msgstr "Megnyitás"
 
 #: src/selector.c:325
 msgid "Save As"
@@ -247,46 +250,14 @@ msgstr "Mentés másként"
 
 #: src/selector.c:345
 msgid "Ch_aracter Coding: "
-msgstr "K_arakter Kódolás: "
+msgstr "K_arakter kódolás: "
 
 #: src/selector.c:401
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "%s' már létezik. Felülír?"
+msgstr "'%s' már létezik. Felülírod?"
 
 #: src/window.c:141
 msgid "Untitled"
 msgstr "Névtelen"
 
-#~ msgid "GTK+ based simple text editor"
-#~ msgstr "GTK+-ra épülő egyszerű szöveg szerkesztő"
-
-#~ msgid "Other Codeset (%s)"
-#~ msgstr "Más Kódtábla (%s)"
-
-#~ msgid "Other Codeset..."
-#~ msgstr "Más Kódtábla..."
-
-#~ msgid "Unicode (UTF-8)"
-#~ msgstr "Unicode"
-
-#~ msgid "Western"
-#~ msgstr "Nyugat Európai"
-
-#~ msgid "Cyrillic"
-#~ msgstr "Cirill"
-
-#~ msgid "Chinese Simplified"
-#~ msgstr "Kínai egyszerűsített"
-
-#~ msgid "Chinese Traditional"
-#~ msgstr "Kínai hagyományos"
-
-#~ msgid "Japanese"
-#~ msgstr "Japán"
-
-#~ msgid "Korean"
-#~ msgstr "Kóreai"
-
-#~ msgid "Enter Codeset"
-#~ msgstr "Kódtábla megadása"
