--- a/po/cs.po
+++ b/po/cs.po
@@ -8,12 +8,12 @@ msgstr ""
 "Project-Id-Version: leafpad 0.7.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-11-18 23:58+0100\n"
+"PO-Revision-Date: 2005-08-20 17:12+0900\n"
 "Last-Translator: Petr Vysloužil <evyslouz@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bitReport-Msgid-Bugs-To: tarot@sdf.lonestar.org\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: src/callback.c:34
 #, c-format
