zh_TW.po translation update
(Old svn revision: 17834)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-26  Hydonsingore Cia
+
+	* zh_TW.po: zh_TW translation update.
+
 2004-12-21  Michal Wrobel <wrobel@task.gda.pl>
 
 	* pl.po: Added Polish translation.
