--- a/po/es.po
+++ b/po/es.po
@@ -1,15 +1,14 @@
-# Spanish/Spain translation of Leafpad
-# Copyright (C) 2004 Free Software Foundation, Inc.
-# This file is distributed under the same license as the leafpad package.
+# Spanish/Spain translation of Mousepad.
+# Copyright (C) 2005 Erik Harrison.
+# This file is distributed under the same license as the Mousepad package.
 # Lucas Vieites <lucas@asixinformatica.com>, 2004.
-# 
-# 
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Leafpad 0.7.5\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-11-04 10:10+0100\n"
+"POT-Creation-Date: 2005-10-07 18:54+0900\n"
+"PO-Revision-Date: 2005-10-07 18:39+0900\n"
 "Last-Translator: Lucas Vieites <lucas@asixinformatica.com>\n"
 "Language-Team: Spanish/Spain <es@li.org>\n"
 "MIME-Version: 1.0\n"
