--- a/po/ca.po
+++ b/po/ca.po
@@ -1,16 +1,16 @@
-# Catalan translation of Leafpad
-# Copyright (C) 2004 Free Software Foundation, Inc.
-# This file is distributed under the same license as the leafpad package.
-# David Rosal <davidrr@users.sourceforge.net> 2004.
-# 
+# Catalan translation of Mousepad.
+# Copyright (C) 2005 Erik Harrison.
+# This file is distributed under the same license as the Mousepad package.
+# David Rosal <davidrr@users.sourceforge.net>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Leafpad 0.7.7\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-11-04 10:10+0100\n"
+"POT-Creation-Date: 2005-10-07 18:54+0900\n"
+"PO-Revision-Date: 2005-10-07 18:36+0900\n"
 "Last-Translator: David Rosal <davidrr@users.sourceforge.net>\n"
-"Language-Team: Catalan\n"
+"Language-Team: Catalan <ca@dodds.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
