--- a/po/fr.po
+++ b/po/fr.po
@@ -1,14 +1,14 @@
-# Leafpad - GTK+ based simple text editor
-# Copyright (C) 2004 Tarot Osuji <tarot@sdf.lonestar.org>
-# 
-# This file is distributed under the GPL.
+# French translations for Mousepad package.
+# Copyright (C) 2005 Erik Harrison.
+# This file is distributed under the same license as the Mousepad package.
 # Luc Pionchon <luc@handhelds.org>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: leafpad 0.7.5\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-11-02 20:47+0200\n"
+"POT-Creation-Date: 2005-10-07 18:54+0900\n"
+"PO-Revision-Date: 2005-10-07 18:40+0900\n"
 "Last-Translator: Luc Pionchon <luc@handhelds.org>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
