--- a/po/hu.po
+++ b/po/hu.po
@@ -1,5 +1,5 @@
-# Hungarian translation of Mousepad
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Hungarian translation of Mousepad.
+# Copyright (C) 2005 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # SZERVÁC Attila <sas@321.hu>, 2005.
 #   based on Leafpad translation by
@@ -7,12 +7,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Leafpad 0.7.7\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2005-05-19 13:25+0100\n"
+"POT-Creation-Date: 2005-10-07 18:54+0900\n"
+"PO-Revision-Date: 2005-10-07 18:42+0900\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -22,8 +22,7 @@ msgstr ""
 msgid "Save changes to '%s'?"
 msgstr "Mented az alábbi változásait?: '%s'"
 
-#: src/callback.c:180
-#: src/file.c:150
+#: src/callback.c:180 src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
 msgstr "A kódkészlet nem váltható erre: '%s'"
@@ -63,6 +62,7 @@ msgid "/File/_New"
 msgstr "/Fájl/_Új"
 
 #. { N_("/File/New _Window"), "<shift><control>N",
+#. G_CALLBACK(cb_file_new), 1 },
 #: src/menu.c:66
 msgid "/File/_Open..."
 msgstr "/Fájl/Meg_nyit"
@@ -184,13 +184,11 @@ msgstr "%d szövegrészletet cseréltünk"
 msgid "Find"
 msgstr "Keres"
 
-#: src/search.c:200
-#: src/search.c:265
+#: src/search.c:200 src/search.c:265
 msgid "Fi_nd what: "
 msgstr "_Amit keres: "
 
-#: src/search.c:219
-#: src/search.c:292
+#: src/search.c:219 src/search.c:292
 msgid "_Match case"
 msgstr "_Kis/nagybetű számít"
 
@@ -260,4 +258,3 @@ msgstr "'%s' már létezik. Felülírod?"
 #: src/window.c:141
 msgid "Untitled"
 msgstr "Névtelen"
-
