--- a/po/it.po
+++ b/po/it.po
@@ -1,11 +1,16 @@
+# Italian translations for Mousepad package.
+# Copyright (C) 2005 Erik Harrison.
+# This file is distributed under the same license as the Mousepad package.
+# Alessio D'Ascanio <g3ntaro@gmail.com>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-11-26 16:55+0100\n"
+"POT-Creation-Date: 2005-10-07 18:54+0900\n"
+"PO-Revision-Date: 2005-10-07 18:43+0900\n"
 "Last-Translator: Alessio D'Ascanio <g3ntaro@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
