--- a/po/pl.po
+++ b/po/pl.po
@@ -1,16 +1,16 @@
-# Polish translation of Leafpad
-# Copyright (C) 2004 Free Software Foundation, Inc.
-# This file is distributed under the same license as the Leafpad package.
+# Polish translation of Mousepad.
+# Copyright (C) 2005 Erik Harrison.
+# This file is distributed under the same license as the Mousepad package.
 # Michal Wrobel <wrobel@task.gda.pl>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Leafpad 0.7.7\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-21 16:40-0500\n"
-"PO-Revision-Date: 2004-12-21 11:05+0100\n"
+"POT-Creation-Date: 2005-10-07 18:54+0900\n"
+"PO-Revision-Date: 2005-10-07 18:45+0900\n"
 "Last-Translator: Michał Wróbel <wrobel@task.gda.pl>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
