--- a/po/ca.po
+++ b/po/ca.po
@@ -1,178 +1,217 @@
+# translation of ca.po to català
 # Catalan translation of Mousepad.
 # Copyright (C) 2005 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # David Rosal <davidrr@users.sourceforge.net>, 2004.
+# paurullan <paurullan@bulma.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Mousepad 0.2.2\n"
+"Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-21 17:30+0900\n"
-"PO-Revision-Date: 2005-10-07 18:36+0900\n"
-"Last-Translator: David Rosal <davidrr@users.sourceforge.net>\n"
-"Language-Team: Catalan <ca@dodds.net>\n"
+"PO-Revision-Date: 2005-10-27 22:30+0200\n"
+"Last-Translator: paurullan <paurullan@bulma.net>\n"
+"Language-Team: català\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #: ../src/callback.c:34
 #, c-format
+#, fuzzy
 msgid "Save changes to '%s'?"
 msgstr "Vols desar els canvis fets a '%s'?"
 
 #: ../src/callback.c:180 ../src/file.c:150
 #, c-format
+#, fuzzy
 msgid "Can't convert codeset to '%s'"
-msgstr "No es pot convertir la codificació a '%s'"
+msgstr "converteix a "
 
 #: ../src/callback.c:207
 #, fuzzy
 msgid "Can't open pipe to process"
-msgstr "No es pot obrir el fitxer per a escriure"
+msgstr "obre conducte a "
 
 #: ../src/callback.c:366
+#, fuzzy
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "A text per a"
 
 #: ../src/dialog.c:135
 #, c-format
+#, fuzzy
 msgid "About %s"
-msgstr "Respecte a %s"
+msgstr "Quant a %s"
 
 #: ../src/file.c:163
+#, fuzzy
 msgid "Can't open file to write"
-msgstr "No es pot obrir el fitxer per a escriure"
+msgstr "obre fitxer a "
 
 #: ../src/file.c:168
+#, fuzzy
 msgid "Can't write file"
-msgstr "No es pot escriure al fitxer"
+msgstr "fitxer"
 
 #: ../src/font.c:49
+#, fuzzy
 msgid "Font"
-msgstr "Tipografia"
+msgstr "Tipus de lletra"
 
 #: ../src/menu.c:60
+#, fuzzy
 msgid "/_File"
 msgstr "/_Fitxer"
 
 #: ../src/menu.c:62
+#, fuzzy
 msgid "/File/_New"
 msgstr "/Fitxer/_Nou"
 
 #. { N_("/File/New _Window"), "<shift><control>N",
 #. G_CALLBACK(cb_file_new), 1 },
 #: ../src/menu.c:66
+#, fuzzy
 msgid "/File/_Open..."
-msgstr "/Fitxer/_Obrir..."
+msgstr "/Fitxer/_Obre..."
 
 #: ../src/menu.c:68
+#, fuzzy
 msgid "/File/_Save"
-msgstr "/Fitxer/_Guardar"
+msgstr "/Fitxer/_Desa"
 
 #: ../src/menu.c:70
+#, fuzzy
 msgid "/File/Save _As..."
-msgstr "/Fitxer/Guardar com _a..."
+msgstr "/Fitxer/Des_a com a..."
 
 #: ../src/menu.c:72
 #, fuzzy
 msgid "/File/_Print..."
-msgstr "/Fitxer/_Obrir..."
+msgstr "/Fitxer/Im_primeix..."
 
 #: ../src/menu.c:76
+#, fuzzy
 msgid "/File/_Quit"
-msgstr "/Fitxer/_Sortir"
+msgstr "Fitxer Surt"
 
 #: ../src/menu.c:78
+#, fuzzy
 msgid "/_Edit"
-msgstr "/_Editar"
+msgstr "/_Edita"
 
 #: ../src/menu.c:80
+#, fuzzy
 msgid "/Edit/_Undo"
-msgstr "/Editar/_Desfer"
+msgstr "/Edita/_Desfés"
 
 #: ../src/menu.c:82
+#, fuzzy
 msgid "/Edit/_Redo"
-msgstr "/Editar/_Refer"
+msgstr "/Edita/_Torna a fer"
 
 #: ../src/menu.c:86
+#, fuzzy
 msgid "/Edit/Cu_t"
-msgstr "/Editar/_Tallar"
+msgstr "/Edita/Re_talla"
 
 #: ../src/menu.c:88
+#, fuzzy
 msgid "/Edit/_Copy"
-msgstr "/Editar/_Copiar"
+msgstr "/Edita/_Copia"
 
 #: ../src/menu.c:90
+#, fuzzy
 msgid "/Edit/_Paste"
-msgstr "/Editar/_Enganxar"
+msgstr "/Edita/_Enganxa"
 
 #: ../src/menu.c:92
+#, fuzzy
 msgid "/Edit/_Delete"
-msgstr "/Editar/Es_borrar"
+msgstr "/Edita/_Suprimeix"
 
 #: ../src/menu.c:96
+#, fuzzy
 msgid "/Edit/Select _All"
-msgstr "/Editar/_Seleccionar-ho tot"
+msgstr "Edita Seleccioneu Totes"
 
 #: ../src/menu.c:98
+#, fuzzy
 msgid "/_Search"
-msgstr "/_Cercar"
+msgstr "Cerca"
 
 #: ../src/menu.c:100
+#, fuzzy
 msgid "/Search/_Find..."
-msgstr "/Cercar/_Cercar..."
+msgstr "Cerca Cerca."
 
 #: ../src/menu.c:102
+#, fuzzy
 msgid "/Search/Find _Next"
-msgstr "/Cercar/Cercar el _següent"
+msgstr "Cerca Cerca Següent"
 
 #: ../src/menu.c:104
+#, fuzzy
 msgid "/Search/Find _Previous"
-msgstr "/Cercar/Cercar l'_anterior"
+msgstr "Cerca Cerca Anterior"
 
 #: ../src/menu.c:106
+#, fuzzy
 msgid "/Search/_Replace..."
-msgstr "/Cercar/_Substituir"
+msgstr "Cerca Reemplaça."
 
 #: ../src/menu.c:110
+#, fuzzy
 msgid "/Search/_Jump To..."
-msgstr "/Cercar/Saltar a la _línia..."
+msgstr "Cerca Salta A."
 
 #: ../src/menu.c:112
+#, fuzzy
 msgid "/_Options"
 msgstr "/_Opcions"
 
 #: ../src/menu.c:114
+#, fuzzy
 msgid "/Options/_Font..."
-msgstr "/Opcions/_Tipografia..."
+msgstr "Opcions Tipus de lletra."
 
 #: ../src/menu.c:116
+#, fuzzy
 msgid "/Options/_Word Wrap"
-msgstr "/Opcions/_Ajust de línia"
+msgstr "Opcions Paraula Ajusta"
 
 #: ../src/menu.c:118
+#, fuzzy
 msgid "/Options/_Line Numbers"
-msgstr "/Opcions/_Numerar les línies"
+msgstr "Opcions Línia Números"
 
 #: ../src/menu.c:122
+#, fuzzy
 msgid "/Options/_Auto Indent"
-msgstr "/Opcions/Auto_indentació"
+msgstr "Opcions Auto Sagnat"
 
 #: ../src/menu.c:124
+#, fuzzy
 msgid "/_Help"
-msgstr "/A_jut"
+msgstr "/_Ajuda"
 
 #: ../src/menu.c:126
+#, fuzzy
 msgid "/Help/_About"
-msgstr "/Ajut/_Respecte a"
+msgstr "/Ajuda/_Quant a"
 
 #: ../src/search.c:73
+#, fuzzy
 msgid "Search string not found"
-msgstr "No s'ha trobat la cadena desitjada"
+msgstr "Cerca cadena de text no"
 
 #: ../src/search.c:115
+#, fuzzy
 msgid "Replace?"
-msgstr "Substituir?"
+msgstr "Reemplaça?"
 
 #: ../src/search.c:143
 #, c-format
@@ -180,70 +219,85 @@ msgid "%d strings replaced"
 msgstr "S'han substituit %d cadenes"
 
 #: ../src/search.c:188
+#, fuzzy
 msgid "Find"
-msgstr "Cercar"
+msgstr "Cerca"
 
 #: ../src/search.c:200 ../src/search.c:265
 msgid "Fi_nd what: "
 msgstr "_Cercar: "
 
 #: ../src/search.c:219 ../src/search.c:292
+#, fuzzy
 msgid "_Match case"
-msgstr "Distingir _majúscules / minúscules"
+msgstr "Coi_ncidència de majúscules i minúscules"
 
 #: ../src/search.c:253
+#, fuzzy
 msgid "Replace"
-msgstr "Substituir"
+msgstr "Reemplaça"
 
 #: ../src/search.c:280
+#, fuzzy
 msgid "Re_place with: "
-msgstr "_Substituir per: "
+msgstr "amb "
 
 #: ../src/search.c:296
+#, fuzzy
 msgid "Replace _all at once"
-msgstr "Substituir-les _totes de cop"
+msgstr "Reemplaça all"
 
 #: ../src/search.c:342
+#, fuzzy
 msgid "Jump To"
-msgstr "Saltar a"
+msgstr "Salta A"
 
 #: ../src/search.c:347
+#, fuzzy
 msgid "_Jump"
-msgstr "_Saltar"
+msgstr "Salta"
 
 #: ../src/search.c:353
+#, fuzzy
 msgid "_Line number: "
-msgstr "Número de _línia: "
+msgstr "Línia nombre "
 
 #: ../src/selector.c:103
 #, c-format
+#, fuzzy
 msgid "Current Locale (%s)"
 msgstr "Locale actual (%s)"
 
 #: ../src/selector.c:147
+#, fuzzy
 msgid "Other Codeset"
-msgstr "Una altra codificació"
+msgstr "Altres"
 
 #: ../src/selector.c:186
+#, fuzzy
 msgid "Code_set:"
-msgstr "Codificació:"
+msgstr "Codi set:"
 
 #: ../src/selector.c:207
 #, c-format
+#, fuzzy
 msgid "'%s' is not supported"
-msgstr "'%s' no és suportat"
+msgstr "és no"
 
 #: ../src/selector.c:271
+#, fuzzy
 msgid "Auto Detect"
-msgstr "Autodetectar"
+msgstr "Detecció automàtica"
 
 #: ../src/selector.c:325
+#, fuzzy
 msgid "Open"
-msgstr "Obrir"
+msgstr "Obre"
 
 #: ../src/selector.c:325
+#, fuzzy
 msgid "Save As"
-msgstr "Guardar com a"
+msgstr "Anomena i desa"
 
 #: ../src/selector.c:345
 msgid "Ch_aracter Coding: "
@@ -251,9 +305,12 @@ msgstr "Codificació de c_aràcters: "
 
 #: ../src/selector.c:401
 #, c-format
+#, fuzzy
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' ja existeix. Vols sobreescriure'l?"
+msgstr "existeix Sobreescriu?"
 
 #: ../src/window.c:141
+#, fuzzy
 msgid "Untitled"
-msgstr "Sense nom"
+msgstr "Sense títol"
+
