--- a/po/eu.po
+++ b/po/eu.po
@@ -1,15 +1,14 @@
-
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Basque translations for Mousepad package.
+# Copyright (C) 2005 Erik Harrison.
+# This file is distributed under the same license as the Mousepad package.
+# Piarres Beobide <pi@beobide.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Mosuepad\n"
+"Project-Id-Version: Mosuepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-17 06:53+0900\n"
-"PO-Revision-Date: 2005-10-27 11:02+0100\n"
+"POT-Creation-Date: 2005-11-21 22:23+0900\n"
+"PO-Revision-Date: 2005-11-17 17:43+0900\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Librezale.org <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
