--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2005-11-21  Daichi Kawahata <daichi@xfce.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translations by Adriano
+	Winter Bess <awbess@gmail.com>.
+
 2005-10-27  Piarres Beobide <pi@beobide.net>
 
-	* eu.po, configure.ac: Adding basque translation
+	* eu.po: Adding basque translation
 
 2005-10-21  Daichi Kawahata <daichi@xfce.org>
 
