--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,16 +1,17 @@
 # Brazilian Portuguese translations for Mousepad package.
-# Copyright (C) 2005 Erik Harrison
+# Copyright (C) 2005 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Tomas Schertel <tschertel@gmail.com>, 2005.
+# Adriano Winter Bess <awbess@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-21 22:23+0900\n"
-"PO-Revision-Date: 2005-09-13 00:16+0900\n"
-"Last-Translator: Tomas Schertel <tschertel@gmail.com>\n"
-"Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
+"PO-Revision-Date: 2005-11-17 17:42+0900\n"
+"Last-Translator: Adriano Winter Bess <awbess@gmail.com>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,16 +19,16 @@ msgstr ""
 #: src/callback.c:34
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr ""
+msgstr "Salvar alterações em '%s'?"
 
 #: src/callback.c:180 src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr ""
+msgstr "Não é possível converter a codificação para '%s'"
 
 #: src/callback.c:207
 msgid "Can't open pipe to process"
-msgstr ""
+msgstr "Não é possível abrir \"pipe\" para o processo"
 
 #: src/callback.c:366
 msgid "A text editor for Xfce"
@@ -40,11 +41,11 @@ msgstr "Sobre %s"
 
 #: src/file.c:163
 msgid "Can't open file to write"
-msgstr ""
+msgstr "Não é possível abrir o arquivo para escrita"
 
 #: src/file.c:168
 msgid "Can't write file"
-msgstr ""
+msgstr "Não é possível escrever o arquivo"
 
 #: src/font.c:49
 msgid "Font"
@@ -121,9 +122,8 @@ msgid "/Search/_Find..."
 msgstr "/Pesquisar/_Procurar..."
 
 #: src/menu.c:102
-#, fuzzy
 msgid "/Search/Find _Next"
-msgstr "/Pesquisar/Procurar _Anterior"
+msgstr "/Pesquisar/Procurar _Próxima"
 
 #: src/menu.c:104
 msgid "/Search/Find _Previous"
@@ -139,23 +139,23 @@ msgstr "/Pesquisar/P_ular Para..."
 
 #: src/menu.c:112
 msgid "/_Options"
-msgstr ""
+msgstr "/_Opções"
 
 #: src/menu.c:114
 msgid "/Options/_Font..."
-msgstr ""
+msgstr "/Opções/_Fonte..."
 
 #: src/menu.c:116
 msgid "/Options/_Word Wrap"
-msgstr ""
+msgstr "/Opções/_Quebra de Palavra"
 
 #: src/menu.c:118
 msgid "/Options/_Line Numbers"
-msgstr ""
+msgstr "/Opções/Números das _linhas"
 
 #: src/menu.c:122
 msgid "/Options/_Auto Indent"
-msgstr ""
+msgstr "/Opções/Identação _Automática"
 
 #: src/menu.c:124
 msgid "/_Help"
@@ -163,11 +163,11 @@ msgstr "/A_juda"
 
 #: src/menu.c:126
 msgid "/Help/_About"
-msgstr "?Ajuda/_Sobre"
+msgstr "/Ajuda/_Sobre"
 
 #: src/search.c:73
 msgid "Search string not found"
-msgstr ""
+msgstr "Expressão procurada não encontrada"
 
 #: src/search.c:115
 msgid "Replace?"
@@ -176,7 +176,7 @@ msgstr "Substituir?"
 #: src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr ""
+msgstr "%d expressões substituídas"
 
 #: src/search.c:188
 msgid "Find"
@@ -184,11 +184,11 @@ msgstr "Procurar"
 
 #: src/search.c:200 src/search.c:265
 msgid "Fi_nd what: "
-msgstr "Procurar por:"
+msgstr "_Procurar por:"
 
 #: src/search.c:219 src/search.c:292
 msgid "_Match case"
-msgstr ""
+msgstr "Diferenciar _maiúsculas e minúsculas"
 
 #: src/search.c:253
 msgid "Replace"
@@ -212,29 +212,29 @@ msgstr "_Pular"
 
 #: src/search.c:353
 msgid "_Line number: "
-msgstr ""
+msgstr "Número da _linha: "
 
 #: src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr ""
+msgstr "Localidade Atual (%s)"
 
 #: src/selector.c:147
 msgid "Other Codeset"
-msgstr ""
+msgstr "Outra Codificação"
 
 #: src/selector.c:186
 msgid "Code_set:"
-msgstr ""
+msgstr "Codif_ição:"
 
 #: src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr ""
+msgstr "'%s' não é suportado"
 
 #: src/selector.c:271
 msgid "Auto Detect"
-msgstr ""
+msgstr "Detectar Automaticamente"
 
 #: src/selector.c:325
 msgid "Open"
@@ -246,12 +246,12 @@ msgstr "Salvar Como"
 
 #: src/selector.c:345
 msgid "Ch_aracter Coding: "
-msgstr ""
+msgstr "Codificação dos C_aracteres: "
 
 #: src/selector.c:401
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr ""
+msgstr "'%s' já existe. Sobrescrever?"
 
 #: src/window.c:141
 msgid "Untitled"
