--- a/po/gu.po
+++ b/po/gu.po
@@ -1,5 +1,5 @@
 # Gujarati translations for Mousepad package.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Ankit Patel <ankit644@yahoo.com>, 2005.
 #
