--- a/po/lt.po
+++ b/po/lt.po
@@ -1,5 +1,5 @@
 # Lithuanian translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Lech Jankovski <godgard@gmail.com>, 2004.
 #
