--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,5 +1,5 @@
 # Traditional Chinese translation for Mousepad package.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Carlos Z.F. Liu <carlos_liu@yahoo.com>, 2004.
 # OLS3 <ols3@lxer.idv.tw>, 2004.
