--- a/po/ca.po
+++ b/po/ca.po
@@ -1,13 +1,13 @@
 # translation of ca.po to català
 # Catalan translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # David Rosal <davidrr@users.sourceforge.net>, 2004.
 # paurullan <paurullan@bulma.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ca\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-21 22:23+0900\n"
 "PO-Revision-Date: 2005-10-27 22:30+0200\n"
