--- a/po/cs.po
+++ b/po/cs.po
@@ -1,5 +1,5 @@
 # Czech translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Petr Vysloužil <evyslouz@volny.cz>, 2004.
 #
