--- a/po/de.po
+++ b/po/de.po
@@ -1,5 +1,5 @@
 # German translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Sebastian Stach <sebsta@t-online.de>, 2004.
 #
