--- a/po/eu.po
+++ b/po/eu.po
@@ -1,5 +1,5 @@
 # Basque translations for Mousepad package.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Piarres Beobide <pi@beobide.net>, 2005.
 #
