--- a/po/hu.po
+++ b/po/hu.po
@@ -1,5 +1,5 @@
 # Hungarian translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # SZERVÁC Attila <sas@321.hu>, 2005.
 #   based on Leafpad translation by
