--- a/po/pl.po
+++ b/po/pl.po
@@ -1,5 +1,5 @@
 # Polish translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Michal Wrobel <wrobel@task.gda.pl>, 2004.
 #
