--- a/po/ru.po
+++ b/po/ru.po
@@ -1,5 +1,5 @@
 # Russian translations for Mousepad package.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Artem Vakhitov <temcat@mail.ru>, 2004.
 #
