--- a/po/sk.po
+++ b/po/sk.po
@@ -1,5 +1,5 @@
 # Slovak translation of Mousepad.
-# Copyright (C) 2005 Erik Harrison.
+# Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Roman Moravcik <roman.moravcik@gmail.com>, 2005.
 #
