--- a/po/ca.po
+++ b/po/ca.po
@@ -3,20 +3,19 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # David Rosal <davidrr@users.sourceforge.net>, 2004.
-# paurullan <paurullan@bulma.net>, 2005.
+# Pau Rul·lan Ferragut <paurullan@bulma.net> 2005, 2006
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-21 22:23+0900\n"
-"PO-Revision-Date: 2005-10-27 22:30+0200\n"
-"Last-Translator: paurullan <paurullan@bulma.net>\n"
-"Language-Team: català\n"
+"PO-Revision-Date: 2006-01-08 21:53+0100\n"
+"Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
+"Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: src/callback.c:34
 #, fuzzy, c-format
