--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,13 @@
+2006-01-08  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: little heading fixing
+
+2006-01-07  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po, cs.po, de.po, el.po, es.po, eu.po, fr.po, gu.po, hu.po,
+	  it.po, ja.po, lt.po, pl.po, pt_BR.po, ru.po, sk.po, sv.po,
+	  ta.po, zh_CN.po, zh_TW.po: Updated copyright information.
+
 2005-11-21  Daichi Kawahata <daichi@xfce.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translations by Adriano
