--- a/po/ca.po
+++ b/po/ca.po
@@ -15,7 +15,7 @@ msgstr ""
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: src/callback.c:34
 #, fuzzy, c-format
