--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-18  Daichi Kawahata <daichi@xfce.org>
+
+	* ru.po: Updated Russian translations by Sergey Fedoseev
+	  <fedoseev.sergey@gmail.com>.
+
 2006-01-08  Pau Rullan Ferragut <paurullan@bulma.net>
 
 	* ca.po: little heading fixing
