--- a/po/ru.po
+++ b/po/ru.po
@@ -2,18 +2,19 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Artem Vakhitov <temcat@mail.ru>, 2004.
+# Sergey Fedoseev <fedoseev.sergey@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-21 22:23+0900\n"
-"PO-Revision-Date: 2005-10-07 18:48+0900\n"
-"Last-Translator: Artem Vakhitov <temcat@mail.ru>\n"
+"PO-Revision-Date: 2006-03-13 20:48+0500\n"
+"Last-Translator: Sergey Fedoseev <fedoseev.sergey@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: src/callback.c:34
 #, c-format
@@ -32,7 +33,7 @@ msgstr "Не удалось открыть файл для записи"
 
 #: src/callback.c:366
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "Текстовый редактор для Xfce"
 
 #: src/dialog.c:135
 #, c-format
@@ -74,9 +75,8 @@ msgid "/File/Save _As..."
 msgstr "/Файл/Сохранить _как..."
 
 #: src/menu.c:72
-#, fuzzy
 msgid "/File/_Print..."
-msgstr "/Файл/_Открыть..."
+msgstr "/Файл/_Печать..."
 
 #: src/menu.c:76
 msgid "/File/_Quit"
@@ -257,3 +257,4 @@ msgstr "'%s' уже существует. Переписать?"
 #: src/window.c:141
 msgid "Untitled"
 msgstr "Без имени"
+
