--- a/po/el.po
+++ b/po/el.po
@@ -2,17 +2,18 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Stavros Giannouris <stavrosg2002@freemail.gr>, 2005.
+# Stathis Kamperis <ekamperi@auth.gr>, 2006.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Mousepad 0.2.2\n"
+"Project-Id-Version: mousepad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-21 22:23+0900\n"
-"PO-Revision-Date: 2005-10-07 18:59+0900\n"
-"Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
-"Language-Team: Greek <i18ngr@hellug.gr>\n"
+"PO-Revision-Date: 2006-03-29 22:42+0300\n"
+"Last-Translator: Stathis Kamperis <ekamperi@auth.gr>\n"
+"Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Greek\n"
 "X-Poedit-Country: GREECE\n"
@@ -29,7 +30,7 @@ msgstr "Αδυναμία μετατροπής της κωδικοσελίδας 
 
 #: src/callback.c:207
 msgid "Can't open pipe to process"
-msgstr "Αδυναμία ανοίγματος διασωλήνωσης προς την διεργασία"
+msgstr "Αδυναμία ανοίγματος διασωλήνωσης προς τη διεργασία"
 
 #: src/callback.c:366
 msgid "A text editor for Xfce"
@@ -42,7 +43,7 @@ msgstr "Περί %s"
 
 #: src/file.c:163
 msgid "Can't open file to write"
-msgstr "Αδυναμία εγγραφής σε αυτό το αρχείο."
+msgstr "Αδυναμία εγγραφής σε αυτό το αρχείο"
 
 #: src/file.c:168
 msgid "Can't write file"
@@ -124,11 +125,11 @@ msgstr "/Αναζήτηση/_Εύρεση..."
 
 #: src/menu.c:102
 msgid "/Search/Find _Next"
-msgstr "/Αναζήτηση/Εύρεση Επόμε_νου"
+msgstr "/Αναζήτηση/Εύρεση επόμε_νου"
 
 #: src/menu.c:104
 msgid "/Search/Find _Previous"
-msgstr "/Αναζήτηση/Εύρεση _Προηγούμενου"
+msgstr "/Αναζήτηση/Εύρεση _προηγούμενου"
 
 #: src/menu.c:106
 msgid "/Search/_Replace..."
@@ -156,7 +157,7 @@ msgstr "/Επιλογές/Α_ριθμοί Γραμμών"
 
 #: src/menu.c:122
 msgid "/Options/_Auto Indent"
-msgstr "/Επιλογές/Αυ_τόματες Εσοχές"
+msgstr "/Επιλογές/Αυ_τόματες εσοχές"
 
 #: src/menu.c:124
 msgid "/_Help"
@@ -177,7 +178,7 @@ msgstr "Αντικατάσταση;"
 #: src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "%d επαναλήψεις αντικαταστάθηκαν."
+msgstr "%d επαναλήψεις αντικαταστάθηκαν"
 
 #: src/search.c:188
 msgid "Find"
@@ -185,7 +186,7 @@ msgstr "Εύρεση"
 
 #: src/search.c:200 src/search.c:265
 msgid "Fi_nd what: "
-msgstr "Ε_υρεση Κειμένου:"
+msgstr "Ε_υρεση του:"
 
 #: src/search.c:219 src/search.c:292
 msgid "_Match case"
@@ -226,7 +227,7 @@ msgstr "Άλλες κωδικοποίησεις"
 
 #: src/selector.c:186
 msgid "Code_set:"
-msgstr "Σετ Χαρακτήρων:"
+msgstr "Σετ χαρακτήρων:"
 
 #: src/selector.c:207
 #, c-format
@@ -235,7 +236,7 @@ msgstr "το '%s' δεν υποστηρίζεται"
 
 #: src/selector.c:271
 msgid "Auto Detect"
-msgstr "Αυτόματη Αναγνώριση"
+msgstr "Αυτόματη αναγνώριση"
 
 #: src/selector.c:325
 msgid "Open"
@@ -243,7 +244,7 @@ msgstr "Άνοιγμα"
 
 #: src/selector.c:325
 msgid "Save As"
-msgstr "Αποθήκευση Ως"
+msgstr "Αποθήκευση ως"
 
 #: src/selector.c:345
 msgid "Ch_aracter Coding: "
@@ -256,4 +257,4 @@ msgstr "Το '%s' υπάρχει ήδη. Αντικατάσταση;"
 
 #: src/window.c:141
 msgid "Untitled"
-msgstr "Χωρίς Τίτλο"
+msgstr "Χωρίς τίτλο"
