--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-15  Daichi Kawahata <daichi@xfce.org>
+
+	* ko.po: Added Korean translations by ByungHyun Choi
+	  <byunghyun.choi@gmail.com>.
+
 2006-03-18  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Sergey Fedoseev
