--- a/po/ru.po
+++ b/po/ru.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: src/callback.c:34
 #, c-format
@@ -257,4 +257,3 @@ msgstr "'%s' уже существует. Переписать?"
 #: src/window.c:141
 msgid "Untitled"
 msgstr "Без имени"
-
