Updated Simplified Chinese by Jick Nan <jick.nan@gmail.com>.
(Old svn revision: 21150)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-22  Daichi Kawahata <daichi@xfce.org>
+
+	* zh_CN.po: Updated Simplified Chinese by Jick Nan
+	<jick.nan@gmail.com>.
+
 2006-04-15  Daichi Kawahata <daichi@xfce.org>
 
 	* ko.po: Added Korean translations by ByungHyun Choi
