--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Carlos Z.F. Liu <carlos_liu@yahoo.com>, 2004.
+# Jick Nan <jick.nan@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2005-10-07 18:52+0900\n"
-"Last-Translator: Carlos Z.F. Liu <carlos_liu@yahoo.com>\n"
+"PO-Revision-Date: 2006-04-20 21:27+0800\n"
+"Last-Translator: Jick Nan <jick.nan@gmail.com>\n"
 "Language-Team: Simplified Chinese <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,13 +27,12 @@ msgid "Can't convert codeset to '%s'"
 msgstr "无法将编码转换到“%s”"
 
 #: ../src/callback.c:207
-#, fuzzy
 msgid "Can't open pipe to process"
-msgstr "无法打开要写入的文件"
+msgstr "无法打开到程序的管道"
 
 #: ../src/callback.c:366
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "一个 Xfce 的文本编辑器"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -74,9 +74,8 @@ msgid "/File/Save _As..."
 msgstr "/文件(F)/另存为(_A)..."
 
 #: ../src/menu.c:72
-#, fuzzy
 msgid "/File/_Print..."
-msgstr "/文件(F)/打开(_O)..."
+msgstr "/文件(F)/打印(_P)..."
 
 #: ../src/menu.c:76
 msgid "/File/_Quit"
@@ -260,13 +259,12 @@ msgstr "无标题"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
-msgstr ""
+msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
 msgstr "简易文字编辑器"
 
 #: ../mousepad.desktop.in.h:3
-#, fuzzy
 msgid "Text Editor"
-msgstr "简易文字编辑器"
+msgstr "文字编辑器"
