--- a/po/eu.po
+++ b/po/eu.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Mosuepad 0.2.2\n"
+"Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-21 22:23+0900\n"
 "PO-Revision-Date: 2005-11-17 17:43+0900\n"
