Added a missing language code.
(Old svn revision: 21167)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-23  Daichi Kawahata <daichi@xfce.org>
+
+	* LINGUAS: Added `uk'.
+
 2006-04-22  Daichi Kawahata <daichi@xfce.org>
 
 	* zh_CN.po: Updated Simplified Chinese by Jick Nan
