Updated Japanese translations.
(Old svn revision: 21174)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
+	* ja.po: Updated Japanese translations.
 	* LINGUAS: Added `ko'.
 	* LINGUAS: Added `uk'.
 
