--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-28  Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>
+
+	* zh_TW.po: Updated traditional Chinese translations.
+
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Sergey Fedoseev
