--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-29  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Piotr Malinski
+	<riklaunim@gmail.com>.
+
 2006-04-28  Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>
 
 	* zh_TW.po: Updated traditional Chinese translations.
