--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2006-04-29  Daichi Kawahata <daichi@xfce.org>
 
+	* *.po: Bump.
 	* LINGUAS: Added a last missing language code.
 	* LINGUAS: Added missing language codes.
 
