--- a/po/et.po
+++ b/po/et.po
@@ -7,7 +7,7 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4 4.4\n"
+"Project-Id-Version: Mousepad 0.2.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
 "PO-Revision-Date: 2006-04-24 07:55+0300\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: ../src/callback.c:34
 #, c-format
@@ -269,4 +269,3 @@ msgstr "Lihtne teksti redaktor"
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
 msgstr "Teksti redaktor"
-
